log
Sun, Sep 14, 2025  9:42:31 PM: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  0|6
total_score: 0/70
eeef3b7
Sun, Sep 14, 2025  9:44:32 PM: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
762a95f
Sun, Sep 14, 2025  9:47:39 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
0114001
Sun, Sep 14, 2025  9:50:10 PM: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
f145fa5
Sun, Sep 14, 2025  9:58:47 PM: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7bfd070
Sun, Sep 14, 2025 10:00:50 PM: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:54:8: error: statement with no effect [-Werror=unused-value]
     map->buckets;
     ~~~^~~~~~~~~
cc1.exe: all warnings being treated as errors
9494d1b
